[gd_scene load_steps=4 format=2]

[ext_resource path="res://nodes/RandomNode.gd" type="Script" id=1]
[ext_resource path="res://nodes/assets/RandomNodeSelected.stylebox" type="StyleBox" id=2]
[ext_resource path="res://nodes/assets/RandomNode.stylebox" type="StyleBox" id=3]

[node name="RandomNode" type="GraphNode"]
margin_right = 181.0
margin_bottom = 48.0
custom_styles/frame = ExtResource( 3 )
custom_styles/selectedframe = ExtResource( 2 )
custom_constants/port_offset = 10
custom_constants/separation = 5
title = "RandomNode"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
out_color = Color( 1, 0, 0, 1 )

[node name="ChoicesHBox" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_top = 25.0
margin_right = 169.0
margin_bottom = 49.0

[node name="Label" type="Label" parent="ChoicesHBox"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 19.0
text = "Outcomes:"

[node name="OutcomesSpinBox" type="SpinBox" parent="ChoicesHBox"]
margin_left = 75.0
margin_right = 149.0
margin_bottom = 24.0
min_value = 2.0
max_value = 10.0
value = 2.0
align = 2
[connection signal="value_changed" from="ChoicesHBox/OutcomesSpinBox" to="." method="_on_OutcomesSpinBox_value_changed"]
